fixed the alignment

--- a/css/templatemo-ocean-vibes.css
+++ b/css/templatemo-ocean-vibes.css
@@ -39,7 +39,7 @@ a.active {
 } */
 
 #inline-popups li {
-  margin: 0 20px;
+  margin: 20px 20px;
 }
 
 .chat-btn {
@@ -205,9 +205,10 @@ a {
 .tm-main-nav ul {
   display: flex;
   flex-wrap: wrap;
-  /* margin-left: auto;
-  margin-right: auto; */
+  margin-left: auto;
+  margin-right: auto;
   justify-content: center;
+  align-items: center;
 }
 
 .tm-container {
